--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VITE_TMDB_API_KEY="eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkNDEzZWRiZWEyMDcxZWM5YWU0Y2Jh
 
 VITE_TMDB_API_URL="https://api.themoviedb.org/3/"
 
-VITE_AUTH_API_URL="https://auth-app-node.vercel.app/api/v1/"
+VITE_AUTH_API_URL="http://localhost:5500/api/v1/"
